--- a/packages/metapackage/tsconfig.json
+++ b/packages/metapackage/tsconfig.json
@@ -205,6 +205,9 @@
       "path": "../theme-light-extension"
     },
     {
+      "path": "../jupyterlab-toc"
+    },
+    {
       "path": "../tooltip"
     },
     {
